[gd_scene load_steps=2 format=3 uid="uid://complete_screen_001"]

[ext_resource type="Script" path="res://scripts/GameCompleteScreen.gd" id="1"]

[node name="GameCompleteScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = offset_right = 1.0
anchor_bottom = 1.0
color = Color(0.102, 0.102, 0.18, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.318, 0.812, 0.4, 1)
theme_override_font_sizes/font_size = 42
text = "üèÜ You Won!"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.667, 0.667, 0.667, 1)
theme_override_font_sizes/font_size = 18
text = "All levels completed!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Final Score: 0"
horizontal_alignment = 1

[node name="NewHighScoreLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 20
text = "üèÜ New High Score!"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Play Again"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"